--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "http": "0.0.0",
     "ng-recaptcha": "^4.3.0",
     "ngx-infinite-scroll": "^7.2.0",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
