--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "http": "0.0.0",
     "ng-recaptcha": "^4.3.0",
+    "ngx-bootstrap": "^5.1.0",
     "ngx-editor": "^4.1.0",
     "ngx-infinite-scroll": "^7.2.0",
     "rxjs": "~6.4.0",
